--- a/configs/model_configs.json
+++ b/configs/model_configs.json
@@ -197,7 +197,8 @@
     "stop_tokens_assistant": [
       "assistant"
     ],
-    "extract_input": "<s> [INST] "
+    "extract_input": "<s> [INST] ",
+    "pre_query_template": "<s> [INST] "
   },
   "google/gemma-1.1-7b-it": {
     "model_name": "google/gemma-1.1-7b-it",
