update 0416 input prompt

--- a/configs/model_configs.json
+++ b/configs/model_configs.json
@@ -198,7 +198,7 @@
       "assistant"
     ],
     "extract_input": "<s> [INST] ",
-    "pre_query_template": "<s> [INST] "
+    "pre_query_template": "<s>user\n "
   },
   "google/gemma-1.1-7b-it": {
     "model_name": "google/gemma-1.1-7b-it",
