--- a/configs/model_configs.json
+++ b/configs/model_configs.json
@@ -197,7 +197,8 @@
     "stop_tokens_assistant": [
       "assistant"
     ],
-    "pre_query_template": "<s>user\n"
+    
+    "pre_query_template": "<s>USER:\n"
   },
   "google/gemma-1.1-7b-it": {
     "model_name": "google/gemma-1.1-7b-it",
