--- a/configs/model_configs.json
+++ b/configs/model_configs.json
@@ -200,6 +200,26 @@
     
     "pre_query_template": "<s>USER:\n"
   },
+"microsoft/WizardLM-2-8x22B": {
+    "model_name": "microsoft/WizardLM-2-8x22B",
+    "stop_tokens": [
+      "<s>",
+      "</s>",
+      "[INST]",
+      "[/INST]"
+    ],
+    "stop_token_ids": [
+      1,
+      2,
+      3,
+      4
+    ],
+    "stop_tokens_assistant": [
+      "assistant"
+    ],
+    
+    "pre_query_template": "<s>USER:\n"
+  },
   "google/gemma-1.1-7b-it": {
     "model_name": "google/gemma-1.1-7b-it",
     "stop_tokens": [
