--- a/configs/model_configs.json
+++ b/configs/model_configs.json
@@ -247,7 +247,15 @@
     "stop_tokens_assistant": [
       "assistant"
     ],
-    "pre_query_template": "<s>[INST]user[/INST]\n\n"
+    "pre_query_template": "<s>[INST]User:[/INST]\n\n",
+    "pre_query_template_with_system_prompt": "<s>system\n\nA chat between a curious user and an artificial intelligence assistant. The assistant gives helpful, detailed, and polite answers to the user's questions.</s>USER:\n",
+    "pre_query_template_math": "<s>system\nYou are an AI assistant designed to provide helpful, step-by-step guidance on solving math problems. The user will ask you a wide range of complex mathematical questions.\nYour purpose is to assist users in understanding mathematical concepts, working through equations, and arriving at the correct solutions.</s>USER:\n",
+    "pre_query_template_code": "<s>system\nYou are an AI assistant designed to provide helpful, step-by-step guidance on coding problems. The user will ask you a wide range of coding questions.\nYour purpose is to assist users in understanding coding concepts, working through code, and arriving at the correct solutions.</s>USER:\\n",
+    "pre_query_template_translation": "<s>system\n\nYou are an AI assistant specifically designed to provide accurate and contextually appropriate translations. Users will ask you to translate text between various languages.\nYour purpose is to assist users in understanding and conveying meaning across languages, maintaining the original context and nuances.</s>USER:\n",
+    "pre_query_template_writing": "<s>system\n\nYou are an AI assistant designed to provide helpful, detailed, and creative writing assistance. Users will ask you to help with various writing tasks, such as essays, stories, or professional documents.\nYour purpose is to assist users in developing their writing skills, generating content, and enhancing the quality of their written work.</s>USER:\n",
+    "pre_query_template_toolscall": "<s>system\n\nYou are an AI assistant designed to provide accurate and efficient guidance on using various tools and function calls. Users will ask you about a range of technical tasks that involve specific tools or function calls.\nYour purpose is to assist users in understanding and applying the correct tools or functions to achieve their objectives.</s>USER:<\n",
+    "pre_query_template_roleplay": "<s>system\n\nYou are an AI assistant designed to engage in roleplay scenarios with users. Users will ask you to take on various roles, such as a historical figure, a fictional character, or a professional expert.\nYour purpose is to provide immersive and interactive roleplay experiences, helping users explore different perspectives and enhance their creativity.</s>USER:\n",
+    "pre_query_template_reasoning": "<s>system\n\nYou are an AI assistant designed to provide logical and critical reasoning support. Users will ask you to help with a variety of reasoning tasks, including solving puzzles, analyzing arguments, and making decisions.\nYour purpose is to assist users in developing their reasoning skills, offering clear explanations, and guiding them through complex thought processes.</s>USER:\n"
   },
 "microsoft/WizardLM-2-8x22B": {
     "model_name": "microsoft/WizardLM-2-8x22B",
